--- a/analysis_report.Rmd
+++ b/analysis_report.Rmd
@@ -56,12 +56,16 @@ Nitrogen Oxides (NOₓ)
 Particulate Matter 10 (PM10)
 **Particulate Matter 10 (PM10)** refers to airborne particles with a diameter of 10 micrometers or less. These particles can originate from a variety of sources, including construction sites, road dust, industrial emissions, and combustion processes. PM10 can be inhaled into the respiratory system, leading to health issues such as respiratory infections, lung inflammation, and aggravation of existing heart and lung diseases. Long-term exposure can decrease lung function and increase mortality from cardiovascular and respiratory diseases.
 
+Selected PM10
+Comprehensive Indicator: PM10 reflects the presence of particulate pollution from various sources, including traffic emissions, industrial processes, and secondary formation from gaseous pollutants.
+Health Impact: PM10 is directly linked to adverse health effects, making it a crucial measure of air quality.
+Correlations: Other pollutants (Benzene, CO, NO2, and NOx) can contribute to the levels of PM10 through primary emissions and secondary reactions, making them suitable predictor variables for analyzing variations in PM10.
 
 ```{r}
 # Pre-requirements
 
 set.seed(123) # set pseudorandom generator for reprocucibility
-requirements <- c("dplyr", "ggplot2", "kableExtra", "ARPALData", "imputeTS", "xts", "forecast", "TSA")
+requirements <- c("dplyr", "ggplot2", "kableExtra", "ARPALData", "imputeTS", "xts", "forecast", "TSA", "tsbox")
 for (library_name in requirements) {
   if (!require(library_name, character.only = TRUE, exclude = if (library_name == "dplyr") c("lag", "filter") else NULL)) {
     install.packages(library_name, repos = "https://cloud.r-project.org")
@@ -79,6 +83,7 @@ source("src/plotting.R")
 # style_file("analysis_report.Rmd")
 ```
 
+# Dataset description
 ```{r}
 # Data retrieval
 
@@ -86,8 +91,10 @@ start_date <- "2014-01-01"
 end_date <- "2023-12-31"
 # Milano v.Senato, Bormio v.Monte Braulio, Schivenoglia v. Malpasso
 aq_station_ids <- c(548, 571, 703)
-aq_station_names <- c("Station 548 - Milano v.Senato", "Station 571 - Bormio v.Monte Braulio", "Station 703 - Schivenoglia v. Malpasso")
+aq_station_names_short <- c("Station 548", "Station 571", "Station 703")
+aq_station_names_full <- c("Station 548 - Milano v.Senato", "Station 571 - Bormio v.Monte Braulio", "Station 703 - Schivenoglia v. Malpasso")
 station_colors <- c("steelblue", "darkorange", "#009E73")
+filtering_colors <- c("red", "blue", "green")
 
 # pollutant : unit of measure mapping
 pollutant_units <- list(
@@ -128,15 +135,9 @@ aq_station_ids <- c(548, 571, 703)
 
 The stations measures different pollutants and where the columns in the dataset are all `NA` this means that the station have no sensors for measuring that pollutant in the air 
 
-# Exploratory Data Analysis
-
-## Raw data
+# First data overview
 
 ```{r echo=FALSE,out.width="50%", out.height="20%", fig.cap="caption", fig.show='hold'}
-knitr::include_graphics(c("assets/images/zoning.png", "assets/images/stations_map.png"))
-``` 
-
-```{r}
 # plot_zoning_map(
 #  title = "ARPA Lombardia zoning",
 #  line_type = 1,
@@ -145,15 +146,14 @@ knitr::include_graphics(c("assets/images/zoning.png", "assets/images/stations_ma
 #  ylab = "Latitude"
 # )
 # plot_AQ_stations(data_aq = df_aq_stations, title = "Map of ARPA stations in Lombardy", col_points = station_colors)
+knitr::include_graphics(c("assets/images/zoning.png", "assets/images/stations_map.png"))
 ```
-
 ```{r}
 print.data.frame(head(df_aq_daily, 3))
 ```
 ```{r}
 print.data.frame(head(df_aq_stations, 3))
 ```
-
 ```{r}
 missing_dates <- check_missing_dates(df_aq_daily, start_date, end_date, "day")
 print(paste("The number of missing dates in the dataset from",
@@ -189,14 +189,14 @@ print_table_custom(
     )) %>%
     distinct() %>%
     arrange(Pollutant),
-  title = paste(aq_station_names[1], "information")
+  title = paste(aq_station_names_full[1], "information")
 )
 ```
 ```{r}
 print_table_custom(
   df_aq_m %>%
     select(c(-IDStation, -NameStation, -Date)),
-  is_summary = TRUE, title = paste(aq_station_names[1], "daily data statistics"),
+  is_summary = TRUE, title = paste(aq_station_names_full[1], "daily data statistics"),
   highlight_rows = com_poll_names
 )
 ```
@@ -210,13 +210,13 @@ print_table_custom(df_aq_stations %>%
     Latitude, Longitude, Altitude, DateStart, DateStop
   )) %>%
   distinct() %>%
-  arrange(Pollutant), title = paste(aq_station_names[2], "information"))
+  arrange(Pollutant), title = paste(aq_station_names_full[2], "information"))
 ```
 ```{r}
 print_table_custom(
   df_aq_b %>%
     select(c(-IDStation, -NameStation, -Date)),
-  is_summary = TRUE, title = paste(aq_station_names[2], "daily data statistics"),
+  is_summary = TRUE, title = paste(aq_station_names_full[2], "daily data statistics"),
   highlight_rows = com_poll_names
 )
 ```
@@ -230,17 +230,16 @@ print_table_custom(df_aq_stations %>%
     Latitude, Longitude, Altitude, DateStart, DateStop
   )) %>%
   distinct() %>%
-  arrange(Pollutant), title = paste(aq_station_names[3], "information"))
+  arrange(Pollutant), title = paste(aq_station_names_full[3], "information"))
 ```
 ```{r}
 print_table_custom(
   df_aq_s %>%
     select(c(-IDStation, -NameStation, -Date)),
-  is_summary = TRUE, title = paste(aq_station_names[3], "daily data statistics"),
+  is_summary = TRUE, title = paste(aq_station_names_full[3], "daily data statistics"),
   highlight_rows = com_poll_names
 )
 ```
-
 
 ```{r}
 for (i in 1:length(com_poll_names)) {
@@ -256,46 +255,44 @@ for (i in 1:length(com_poll_names)) {
 ```
 
 
-## Time-related data
-imputeTS^[Moritz S, Bartz-Beielstein T (2017). "imputeTS: Time Series Missing Value Imputation in R." The R Journal, 9(1), 207–218. doi:10.32614/RJ-2017-009.]^ package is used to impute missing values in the time series data.
+# Exploratory Data Analysis (EDA)
 ```{r}
 ts_m <- xts(df_aq_m$PM10, order.by = df_aq_m$Date)
 ts_b <- xts(df_aq_b$PM10, order.by = df_aq_b$Date)
 ts_s <- xts(df_aq_s$PM10, order.by = df_aq_s$Date)
 ```
-```{r fig.height=6, fig.width=12}
+```{r fig.height=6, fig.width=10}
 plot_3_ts(
   ts1 = ts_m, ts2 = ts_b, ts3 = ts_s,
   ts_colors = station_colors,
   main = "PM10 time series for the stations",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
-  legend_names = aq_station_names
+  legend_names = aq_station_names_full
 )
 ```
-```{r fig.height=10, fig.width=12}
+```{r fig.height=8, fig.width=10}
 plot_ts_grid(
   ts_list = list(ts_m, ts_b, ts_s),
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
-  colors = station_colors,
+  ts_colors = station_colors,
   n_row = 3,
-  ts_names = aq_station_names
+  ts_names = aq_station_names_full
 )
 ```
 
 ```{r}
-agg_df_aq_s <- ARPALData::Time_aggregate(
-  df_aq_s, "monthly",
+agg_df_aq_m <- ARPALData::Time_aggregate(
+  df_aq_m, "weekly",
   Var_vec = "PM10", Fns_vec = "mean"
 )
 agg_df_aq_b <- ARPALData::Time_aggregate(
-  df_aq_b, "monthly",
+  df_aq_b, "weekly",
   Var_vec = "PM10", Fns_vec = "mean"
 )
-agg_df_aq_m <- ARPALData::Time_aggregate(
-  df_aq_m, "monthly",
+agg_df_aq_s <- ARPALData::Time_aggregate(
+  df_aq_s, "weekly",
   Var_vec = "PM10", Fns_vec = "mean"
 )
-
 plot_ts_grid(
   ts_list = list(
     xts(agg_df_aq_m$PM10, order.by = agg_df_aq_m$Date),
@@ -305,11 +302,323 @@ plot_ts_grid(
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
   ts_colors = station_colors,
   n_row = 3,
-  ts_names = aq_station_names
+  ts_names = aq_station_names_full
+)
+agg_df_aq_m <- NULL
+agg_df_aq_b <- NULL
+agg_df_aq_s <- NULL
+```
+
+```{r}
+agg_df_aq_m <- ARPALData::Time_aggregate(
+  df_aq_m, "monthly",
+  Var_vec = "PM10", Fns_vec = "mean"
+)
+agg_df_aq_b <- ARPALData::Time_aggregate(
+  df_aq_b, "monthly",
+  Var_vec = "PM10", Fns_vec = "mean"
+)
+agg_df_aq_s <- ARPALData::Time_aggregate(
+  df_aq_s, "monthly",
+  Var_vec = "PM10", Fns_vec = "mean"
+)
+monthplot(
+  tsbox::ts_ts(xts(agg_df_aq_m$PM10, order.by = agg_df_aq_m$Date, frequency = 12)),
+  main = "Monthly plot of PM10 for Milano v.Senato",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+monthplot(
+  tsbox::ts_ts(xts(agg_df_aq_b$PM10, order.by = agg_df_aq_b$Date, frequency = 12)),
+  main = "Monthly plot of PM10 for Bormio v.Monte Braulio",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+monthplot(
+  tsbox::ts_ts(xts(agg_df_aq_s$PM10, order.by = agg_df_aq_s$Date, frequency = 12)),
+  main = "Monthly plot of PM10 for Schivenoglia v. Malpasso",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
 ```
 
 
+# Missing values imputation 
+"Length of time series" - Number of observations in the time series (including NAs)
+"Number of Missing Values" - Number of missing values in the time series
+"Number of Gaps" - Number of NA gaps (consisting of one or more consecutive NAs) in the time series
+"Average Gap Size" - Average size of consecutive NAs for the NA gaps in the time series
+"Percentage of Missing Values" - Percentage of missing values in the time series
+"Longest NA gap" - Longest series of consecutive missing values (NAs in a row) in the time series
+"Most frequent gap size" - Most frequent occurring series of missing values in the time series
+```{r}
+stats_na_ts_m <- imputeTS::statsNA(ts_m, print_only = FALSE)
+stats_na_ts_b <- imputeTS::statsNA(ts_b, print_only = FALSE)
+stats_na_ts_s <- imputeTS::statsNA(ts_s, print_only = FALSE)
+stats_na_table <- as.data.frame(
+  rbind(
+    stats_na_ts_m,
+    stats_na_ts_b,
+    stats_na_ts_s
+  )
+)
+stats_na_table <- stats_na_table[, c(-dim(stats_na_table)[2], -(dim(stats_na_table)[2] - 1))]
+colnames(stats_na_table) <- c(
+  "Length TS", "Number NAs", "Number Gaps", "Average Gap Size",
+  "Percentage NAs", "Longest NA gap", "Most frequent gap size"
+)
+rownames(stats_na_table) <- aq_station_names_short
+stats_na_table
+```
+
+```{r fig.height=4, fig.width=10}
+imputeTS::ggplot_na_distribution(ts_m,
+  x_axis_labels = time(ts_m),
+  title = paste(aq_station_names_short[1], "-", "missing values"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  color_lines = station_colors[1],
+  size_points = NA
+)
+imputeTS::ggplot_na_distribution2(ts_m,
+  title = paste(aq_station_names_short[1], "-", "missing values ratio per interval"),
+)
+```
+```{r fig.height=4, fig.width=10}
+imputeTS::ggplot_na_distribution(ts_b,
+  x_axis_labels = time(ts_b),
+  title = paste(aq_station_names_short[2], "-", "missing values"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  color_lines = station_colors[2],
+  size_points = NA
+)
+imputeTS::ggplot_na_distribution2(ts_b,
+  title = paste(aq_station_names_short[2], "-", "missing values ratio per interval"),
+)
+```
+```{r fig.height=4, fig.width=10}
+imputeTS::ggplot_na_distribution(ts_s,
+  x_axis_labels = time(ts_s),
+  title = paste(aq_station_names_short[3], "-", "missing values"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  color_lines = station_colors[3],
+  size_points = NA
+)
+imputeTS::ggplot_na_distribution2(ts_s,
+  title = paste(aq_station_names_short[3], "-", "missing values ratio per interval"),
+)
+```
+
+```{r fig.height=4, fig.width=8}
+ts_m_imputed <- imputeTS::na_kalman(ts_m)
+ts_b_imputed <- imputeTS::na_kalman(ts_b)
+ts_s_imputed <- imputeTS::na_kalman(ts_s)
+
+imputeTS::ggplot_na_imputations(
+  window(ts_m, start = "2021-01-01", end = "2022-12-31"),
+  window(ts_m_imputed, start = "2021-01-01", end = "2022-12-31"),
+  title = paste(aq_station_names_short[1], "-", "Kalman imputation"),
+  x_axis_labels = time(window(ts_m, start = "2021-01-01", end = "2022-12-31")),
+  color_points = station_colors[1],
+  color_lines = rgb2hex_custom(col2rgb_custom(station_colors[1], 0.6)),
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+imputeTS::ggplot_na_imputations(
+  window(ts_b, start = "2014-01-01", end = "2015-12-31"),
+  window(ts_b_imputed, start = "2014-01-01", end = "2015-12-31"),
+  title = paste(aq_station_names_short[2], "-", "Kalman imputation"),
+  x_axis_labels = time(window(ts_b, start = "2014-01-01", end = "2015-12-31")),
+  color_points = station_colors[2],
+  color_lines = rgb2hex_custom(col2rgb_custom(station_colors[2], 0.6)),
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+imputeTS::ggplot_na_imputations(
+  window(ts_s, start = "2016-01-01", end = "2017-12-31"),
+  window(ts_s_imputed, start = "2016-01-01", end = "2017-12-31"),
+  title = paste(aq_station_names_short[3], "-", "Kalman imputation"),
+  x_axis_labels = time(window(ts_s, start = "2016-01-01", end = "2017-12-31")),
+  color_points = station_colors[3],
+  color_lines = rgb2hex_custom(col2rgb_custom(station_colors[3], 0.6)),
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+
+ts_m <- ts_m_imputed
+ts_b <- ts_b_imputed
+ts_s <- ts_s_imputed
+```
+
+# Outliers detection
+```{r}
+outliers_ts_m <- tsoutliers(ts_m)
+outliers_ts_b <- tsoutliers(ts_b)
+outliers_ts_s <- tsoutliers(ts_s)
+
+tmp_ts_m <- xts(ts_m)
+tmp_ts_m[outliers_ts_m$index] <- NA
+imputeTS::ggplot_na_imputations(
+  tmp_ts_m, ts_m,
+  title = paste(aq_station_names_short[1], "-", "outliers detection"),
+  x_axis_labels = time(ts_m),
+  color_lines = station_colors[1],
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  size_points = NA,
+  size_imputations = 3,
+  legend = FALSE
+)
+tmp_ts_b <- xts(ts_b)
+tmp_ts_b[outliers_ts_b$index] <- NA
+imputeTS::ggplot_na_imputations(
+  tmp_ts_b, ts_b,
+  title = paste(aq_station_names_short[2], "-", "outliers detection"),
+  x_axis_labels = time(ts_b),
+  color_lines = station_colors[2],
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  size_points = NA,
+  size_imputations = 3,
+  legend = FALSE
+)
+tmp_ts_s <- xts(ts_s)
+tmp_ts_s[outliers_ts_s$index] <- NA
+imputeTS::ggplot_na_imputations(
+  tmp_ts_s, ts_s,
+  title = paste(aq_station_names_short[3], "-", "outliers detection"),
+  x_axis_labels = time(ts_s),
+  color_lines = station_colors[3],
+  color_imputations = "red",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  size_points = NA,
+  size_imputations = 3,
+  legend = FALSE
+)
+
+outliers_ts_m <- NULL
+outliers_ts_b <- NULL
+outliers_ts_s <- NULL
+tmp_ts_m <- NULL
+tmp_ts_b <- NULL
+tmp_ts_s <- NULL
+```
+
+# Filtering and decomposition
+
+We begin with a basic filter: the **simple moving average**, which calculates the **arithmetic average** over a time window $p$.
+
+$$
+\hat{f}_t = \frac{1}{2p + 1} \sum_{i=-p}^p y_{t+i}
+$$
+
+We test different values of $p$, which plays a significant **role in determining the effect of smoothing** by considering a larger time window.
+
+
+s.window controls how rapidly the seasonal component can change. Small values allow more rapid change. Setting the seasonal window to be infinite is equivalent to forcing the seasonal component to be periodic
+
+If you think the seasonal pattern is constant through time, you should set this parameter to a big value, so that you use the entire data to perform your analysis. If on the other way round, the seasonal pattern evolves quickly, reduce this parameter to use only the recent data so that your analysis is not affected by old seasonal pattern that are not relevant anymore
+```{r}
+plot_filtered_ts(
+  original_ts = tsbox::ts_ts(ts_m),
+  filtered_ts_list = list(simple_ma(tsbox::ts_ts(ts_m), p = 4), simple_ma(tsbox::ts_ts(ts_m), p = 8), simple_ma(tsbox::ts_ts(ts_m), p = 12)),
+  main = paste(aq_station_names_short[1], "-", "simple moving average filter"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = c("p = 4", "p = 8", "p = 12"),
+  line_colors = filtering_colors
+)
+# plot_filtered_ts(
+#  original_ts = ts_b,
+#  filtered_ts_list = list(simple_ma(ts_b, p = 4), simple_ma(ts_b, p = 8), simple_ma(ts_b, p = 12)),
+#  main = paste(aq_station_names_short[2], "-", "simple moving average filter"),
+#  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+#  legend_names = c("p = 4", "p = 8", "p = 12"),
+#  line_colors = filtering_colors
+# )
+# plot_filtered_ts(
+#  original_ts = ts_s,
+#  filtered_ts_list = list(simple_ma(ts_s, p = 4), simple_ma(ts_s, p = 8), simple_ma(ts_s, p = 12)),
+#  main = paste(aq_station_names_short[3], "-", "simple moving average filter"),
+#  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+#  legend_names = c("p = 4", "p = 8", "p = 12"),
+#  line_colors = filtering_colors
+# )
+```
+
+```{r}
+stl_ts_m <- ts_m %>% stl(s.window = 13, robust = TRUE)
+stl_ts_b <- ts_b %>% stl(s.window = 13, robust = TRUE)
+stl_ts_s <- ts_s %>% stl(s.window = 13, robust = TRUE)
+
+plot(
+  stl_ts_m,
+  main = paste(aq_station_names_short[1], "-", "STL decomposition"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+plot(
+  stl_ts_b,
+  main = paste(aq_station_names_short[2], "-", "STL decomposition"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+plot(
+  stl_ts_s,
+  main = paste(aq_station_names_short[3], "-", "STL decomposition"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+
+Box.test(stl_ts_m$time.series[, "remainder"], lag = log(length(ts_m)), type = "Ljung-Box")
+Box.test(stl_ts_b$time.series[, "remainder"], lag = log(length(ts_b)), type = "Ljung-Box")
+Box.test(stl_ts_s$time.series[, "remainder"], lag = log(length(ts_s)), type = "Ljung-Box")
+```
+
+```{r}
+plot_filtered_ts(
+  original_ts = ts_m,
+  filtered_ts_list = list(seasadj(stl_ts_m)),
+  main = paste(aq_station_names_short[1]),
+  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[1]
+)
+plot_filtered_ts(
+  original_ts = ts_b,
+  filtered_ts_list = list(seasadj(stl_ts_b)),
+  main = paste(aq_station_names_short[2]),
+  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[1]
+)
+plot_filtered_ts(
+  original_ts = ts_s,
+  filtered_ts_list = list(seasadj(stl_ts_s)),
+  main = paste(aq_station_names_short[3]),
+  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[1]
+)
+```
+
+```{r}
+plot_stl_components(
+  list(stl_ts_m, stl_ts_b, stl_ts_s),
+  main = "Trend components for PM10",
+  component_name = "trend",
+  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+  names = aq_station_names_short
+)
+plot_stl_components(
+  list(stl_ts_m, stl_ts_b, stl_ts_s),
+  main = "Seasonal components for PM10",
+  component_name = "seasonal",
+  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
+  names = aq_station_names_short
+)
+```
+
+```{r}
+# p <- 4
+# weights <- rep(1 / (2 * p + 1), times = 2 * p + 1) # times=2*p+1 because p a dx + p a sx +1 (that is the y_0)
+# trend <- filter(temperature.bas,
+#  sides = 2,
+#  filter = weights
+# )
+```
 ```{r}
 # ALL DONE AMONGS THE AREAS
 # Clean and preprocess the data, handling missing values and outliers as necessary.
